# TraderHarness

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MIGRATION_GUIDE.md  README.md  README_en.md  README_zh.md  SECURITY.md  backtest_result.txt  compose.yml  context_full.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml
.cursor/rules/: backtest-invariants.mdc  collaboration.mdc  data-and-validation.mdc  frontend.mdc  project-conventions.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dataset-release.yml  docs.yml  gitee-mirror.yml  release.yml
docs/: AI 像素风 RPG 游戏开发指南.docx  api.md  architecture.md  comparison.md  contamination.md  data.md  extensions.md  faq.md  index.md  quickstart.md  release-playbook.md  roadmap.md  training-data.md  v0.1.0-plan.md
docs/design/: animation_preview.html  multi-role-agent.md  pixel-trader-scene.md
docs/overrides/: main.html
examples/: tradingagents_committee.yaml
examples/replays/: momentum_dragon_2024-03-14.jsonl
finharness/agents/: context.py  llm_client.py  loop.py  tool_agent.py
finharness/agents/baselines/: buy_hold.py  ma_cross.py  random_agent.py
finharness/agents/sandbox/: executor.py  workspace.py
finharness/core/: engine.py  env.py  matching.py  portfolio.py
finharness/data/: market_data_manager.py  registry.py
finharness/data/providers/: base.py  parquet.py  tencent.py
finharness/metrics/: performance.py
finharness/tools/: __init__.py  analysis.py  filesystem.py  market.py  portfolio.py  registry.py  scripting.py  trading.py  watchlist.py
finharness/trajectory/: __init__.py  collector.py
finharness/ui/: __init__.py
finharness/ui/components/: trade_table.py
finharness/ui/pages/: dashboard.py  trajectory.py
pixel-office/: index.html  package-lock.json  package.json  vite.config.ts
pixel-office/src/: App.css  App.tsx  index.css
pixel-office/src/office/: types.ts
pixel-office/tools/: generate_characters.py
scripts/: audit_entity_leakage.py  backfill_5min_remaining.py  build_entity_templates.py  build_hf_release.py  build_llms_full.py  build_readme_gif.py  build_social_preview.py  clean_announcements_a_share.py  consolidate_5min.py  create_references.py  data_doctor.py  e2e_llm_test.py  export_public_repo.py  fetch_5min_backfill.py  fetch_5year_data.py  fetch_business_segments.py  fetch_cls_news.py  fetch_cninfo_announcements.py  fetch_csi300_index.py  fetch_daily_backfill.py  fetch_dividend_data.py  fetch_fundamentals.py  fetch_valuation.py  fetch_wallstreetcn_news.py  fix_5min_gaps.py  gap_backfill_manifest.json  generate_pixel_assets.py  generate_pixel_assets_v2.py  generate_pixel_office_assets.py  generate_tile_assets.py  generate_v4_assets.py  generate_v5_assets.py  generate_v6_assets.py  generate_v7_assets.py  generate_v7_production.py  patch_5min_fast.py  patch_5min_parallel.py  patch_remaining.py  preprocess_sprites.py  recompress_5min_zstd.py  (+5 more)
scripts/archive/fund-flow/: concept_7d_data.json  fetch_7d_flow.py  fetch_fund_flow.py  fetch_fund_flow2.py  fetch_sina_flow.py  fetch_sina_moneyflow.py  find_api.py  fund_flow_matrix.json  gen_report.py  heatmap_rows.html  (+6 more)
test_cache_benchmark/: metadata.json
tests/: conftest.py
tests/integration/: test_engine_features.py  test_full_backtest.py  test_multi_run.py  test_real_backtest.py  test_replay_mode.py  test_server_demo.py
tests/unit/: test_audit.py  test_cli.py  test_hashseed.py  test_paths.py  test_readme_consistency.py
traderharness/: __init__.py  __main__.py  _hashseed.py  audit.py  cli.py  paths.py  result_analysis.py  results.py  run_results.py
traderharness/agents/: __init__.py  agent_card.py  committee.py  context.py  llm_client.py  loop.py  memory.py  personas.py  prompt_agent.py  prompt_audit.py  protocol.py  tool_agent.py  window_context.py
traderharness/config/: env_config.py  llm_settings.py
traderharness/core/: __init__.py  benchmark.py  budget.py  calendar.py  engine.py  entity_masking.py  env.py  events.py  leakage.py  live_feed.py  market_profile.py  masking.py  portfolio.py  runner.py
traderharness/data/: __init__.py  cache.py  datasets.py  dividend_manager.py  entity_templates.py  market_data_manager.py  min5_clean.py  news_data_manager.py  release.py  stock_registry.json  stock_registry_loader.py  sw_industry_mapping.json  update_providers.py  updater.py  writers.py
traderharness/demo/: __init__.py
traderharness/metrics/: behavior.py  benchmark.py  comparison.py  comparison_report.py  performance.py  report.py
traderharness/server/: __init__.py  app.py  run_manager.py
traderharness/tools/: _coerce.py  analysis.py  business.py  catalog.py  control.py  dedup.py  filesystem.py  fundamentals.py  market.py  news.py  portfolio.py  registry.py  sandbox.py  scripting.py  trading.py  valuation.py  watchlist.py  workspace.py
traderharness/trajectory/: bundle.py  collector.py  replay.py  sft.py
traderharness/ui/: app.py  theme.py
webui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
webui/e2e/: demo.spec.ts
webui/scripts/: capture-demo.mjs
webui/src/: App.tsx  api.ts  live-panel.css  liveDerived.test.ts  liveDerived.ts  locale.test.ts  locale.ts  main.tsx  officeLayout.test.ts  styles.css  types.ts
workspaces/backtest_2m/: trade_journal_20240517.md  trade_notes_0407.txt  trade_notes_0426.txt
workspaces/bt2m/: trade_notes_20240529.md
(+133 files in other folders)
