[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traderharness"
version = "0.1.0"
description = "A realistic LLM-native harness for building, testing, and benchmarking autonomous trading agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "HephaestLab" }]
keywords = ["llm", "trading", "agents", "backtesting", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.1",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
llm = ["openai>=1.58", "tenacity>=8.0", "json-repair>=0.27"]
data = ["mootdx>=0.11.7"]
ui = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.21", "ruff>=0.4", "mypy>=1.8"]
all = ["traderharness[llm,data,ui,dev]"]

[project.scripts]
traderharness = "traderharness.cli:main"

[project.urls]
Homepage = "https://github.com/HephaestLab/traderharness"
Repository = "https://github.com/HephaestLab/traderharness"
Issues = "https://github.com/HephaestLab/traderharness/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["traderharness"]
branch = true
omit = [
    "traderharness/ui/*",
    "traderharness/cli.py",
    "traderharness/data/providers/mootdx.py",
    "traderharness/data/providers/tencent.py",
    "traderharness/data/providers/base.py",
    "traderharness/data/datasets.py",
    "traderharness/tools/market.py",
    "traderharness/tools/portfolio.py",
    "traderharness/tools/trading.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
