[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traderharness"
version = "1.1.0"
description = "Contamination-resistant A-share backtesting, evaluation, and trajectory generation for autonomous LLM trading agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "HephaestLab" }]
keywords = [
    "llm-agents",
    "autonomous-agents",
    "quantitative-trading",
    "backtesting",
    "a-share",
    "benchmark",
    "deepseek",
    "synthetic-data",
    "sft",
    "rlhf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.25,<0.26",
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.1",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.58", "tenacity>=8.0", "json-repair>=0.27"]
data = [
    "mootdx>=0.11.7",
    "baostock>=0.9.1",
    "duckdb>=1.5.4",
    "flashtext>=2.7",
    "huggingface_hub>=0.34",
]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.21", "ruff>=0.4", "mypy>=1.8"]
docs = ["mkdocs-material>=9.5", "mkdocs-minify-plugin>=0.8"]
all = ["traderharness[llm,data,ui,dev,docs]"]

[project.scripts]
traderharness = "traderharness.cli:main"

[project.urls]
Homepage = "https://github.com/HephaestLab/TraderHarness"
Documentation = "https://hephaestlab.github.io/TraderHarness/"
Repository = "https://github.com/HephaestLab/TraderHarness"
Issues = "https://github.com/HephaestLab/TraderHarness/issues"

[tool.hatch.build.targets.wheel.force-include]
"examples/replays/momentum_dragon_2024-03-14.jsonl" = "traderharness/demo/momentum_dragon_2024-03-14.jsonl"

[tool.hatch.build]
artifacts = ["traderharness/ui/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["scripts/archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["traderharness"]
branch = true
omit = [
    "traderharness/ui/*",
    "traderharness/cli.py",
    "traderharness/agents/llm_client.py",
    "traderharness/agents/prompt_audit.py",
    "traderharness/data/providers/mootdx.py",
    "traderharness/data/providers/tencent.py",
    "traderharness/data/providers/base.py",
    "traderharness/data/update_providers.py",
    "traderharness/data/datasets.py",
    "traderharness/tools/market.py",
    "traderharness/tools/portfolio.py",
    "traderharness/tools/trading.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
